// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders medium and up when medium size defined 1`] = `
<div
  className="eFJsIk"
>
  <div
    className="gIXJfP"
  >
    <div
      className="iuDOyv"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Grid renders multiple sizes defined 1`] = `
<div
  className="eFJsIk"
>
  <div
    className="gIXJfP"
  >
    <div
      className="hyDDWG"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Grid renders small size defined 1`] = `
<div
  className="eFJsIk"
>
  <div
    className="gIXJfP"
  >
    <div
      className="dJwLzM"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Grid renders with defaults 1`] = `
<div
  className="eFJsIk"
>
  <div
    className="gIXJfP"
  >
    <div
      className="hXtSSo"
    >
      Content
    </div>
  </div>
</div>
`;
